--- a/src/ggrc/assets/stylesheets/_components.scss
+++ b/src/ggrc/assets/stylesheets/_components.scss
@@ -28,3 +28,4 @@
 @import "components/page-header/page-header";
 @import "components/tabs/tab-container";
 @import "components/tabs/tab-panel";
+@import "components/auto-save-form/auto-save-form";
