Add rich text field implementation

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
@@ -21,6 +21,13 @@
                                  (value-changed)="fieldValueChanged(%event)"
           ></text-value-form-field>
         {{/case}}
+        {{#case 'text'}}
+          <rich-text-value-form-field {value}="value"
+                                      {field-id}="id"
+                                      {placeholder}="placeholder"
+                                      (value-changed)="fieldValueChanged(%event)"
+          ></rich-text-value-form-field>
+        {{/case}}
       {{/switch}}
     </div>
   {{/fields}}
