--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -14,6 +14,11 @@ auto-save-form {
     .field-wrapper {
       flex: 1 1 50%;
       margin-bottom: 16px;
+      max-width: 50%;
+
+      .input-wrapper {
+        padding-right: 20px;
+      }
 
       & > label {
         overflow: hidden;
@@ -37,6 +42,31 @@ text-value-form-field {
   .input-wrapper {
     input {
       margin-bottom: 0;
+      width: 100%;
+      box-sizing: border-box;
+      height: 28px;
+      border-radius: 2px;
+    }
+  }
+}
+
+rich-text-value-form-field {
+  .input-wrapper {
+    .ql-container {
+      background: #fff;
+    }
+
+    &:not(.focused) {
+      .ql-container {
+        color: #555;
+        height: 26px;
+        padding: 4px !important;
+      }
+
+      .ql-toolbar,
+      .ql-tooltip {
+        display: none;
+      }
     }
   }
 }
