Add checkbox value form field

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
@@ -28,6 +28,12 @@
                                       (value-changed)="fieldValueChanged(%event)"
           ></rich-text-value-form-field>
         {{/case}}
+        {{#case 'checkbox'}}
+          <checkbox-value-form-field {value}="value"
+                                     {field-id}="id"
+                                     (value-changed)="fieldValueChanged(%event)"
+          ></checkbox-value-form-field>
+        {{/case}}
       {{/switch}}
     </div>
   {{/fields}}
