Add dropdown value form field

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
@@ -34,6 +34,13 @@
                                      (value-changed)="fieldValueChanged(%event)"
           ></checkbox-value-form-field>
         {{/case}}
+        {{#case 'dropdown'}}
+          <dropdown-value-form-field {value}="value"
+                                     {options}="options"
+                                     {field-id}="id"
+                                     (value-changed)="fieldValueChanged(%event)"
+          ></dropdown-value-form-field>
+        {{/case}}
       {{/switch}}
     </div>
   {{/fields}}
