--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -53,6 +53,8 @@ text-value-form-field {
 }
 
 rich-text-value-form-field {
+  display: block;
+
   .input-wrapper {
     .ql-container {
       background: #fff;
@@ -65,6 +67,14 @@ rich-text-value-form-field {
       }
     }
 
+    &.focused {
+      .rich-text__wrapper {
+        border-color: rgba(82, 168, 236, 0.8);
+        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+        transition: border linear .2s, box-shadow linear .2s;
+      }
+    }
+
     &:not(.focused) {
       .ql-container {
         color: #555;
@@ -74,6 +84,32 @@ rich-text-value-form-field {
       .ql-toolbar,
       .ql-tooltip {
         display: none;
+      }
+    }
+  }
+}
+
+dropdown-value-form-field {
+
+  .input-wrapper {
+    dropdown {
+      select {
+        width: 100%;
+        font-size: 13px;
+        -webkit-appearance: none;
+        border-radius: 2px;
+        outline: none;
+        border: 1px solid #ccc;
+        color: #555;
+        padding: 0 24px 0 4px;
+        text-overflow: ellipsis;
+        background: #fff url("data:image/svg+xml;utf8,<svg width='24' height='16' viewBox='0 0 1792 1792' xmlns='http://www.w3.org/2000/svg'><path fill='#797979' d='M1408 704q0 26-19 45l-448 448q-19 19-45 19t-45-19l-448-448q-19-19-19-45t19-45 45-19h896q26 0 45 19t19 45z'/></svg>") no-repeat 100% 50%;
+
+        &:focus {
+          border-color: rgba(82, 168, 236, 0.8);
+          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
+          transition: border linear .2s, box-shadow linear .2s;
+        }
       }
     }
   }
