--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -6,6 +6,15 @@
 auto-save-form {
   display: block;
   position: relative;
+  padding-top: 20px;
+
+  .auto-save-form-status {
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 12px;
+    color: #8a8a8a;
+  }
 
   .fields-wrapper {
     display: flex;
