--- a/src/ggrc/assets/mustache/components/dropdown/dropdown.mustache
+++ b/src/ggrc/assets/mustache/components/dropdown/dropdown.mustache
@@ -9,6 +9,7 @@
   null-if-empty="null-if-empty"
   can-change="onChange"
   {{#isDisabled}}disabled="disabled"{{/isDisabled}}
+  {{#controlId}}id="{{controlId}}"{{/controlId}}
   >
 {{#options}}
   {{#if title}}
