--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -113,6 +113,7 @@ rich-text-value-form-field {
 }
 
 dropdown-value-form-field {
+  display: block;
 
   .input-wrapper {
     dropdown {
@@ -132,6 +133,32 @@ dropdown-value-form-field {
           border-color: rgba(82, 168, 236, 0.8);
           box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
           transition: border linear .2s, box-shadow linear .2s;
+        }
+      }
+    }
+  }
+}
+
+date-value-form-field {
+  display: block;
+
+  .input-wrapper {
+    datepicker {
+      .datepicker__input-wrapper {
+        input {
+          margin: 0;
+          width: 100%;
+          box-sizing: border-box;
+          height: 28px;
+          line-height: 28px;
+          border-radius: 2px;
+          padding-left: 24px;
+        }
+
+        i {
+          font-size: 14px;
+          top: 6px;
+          left: 7px;
         }
       }
     }
