Rename field components tags

--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -62,7 +62,7 @@ auto-save-form {
   }
 }
 
-text-value-form-field {
+text-form-field {
   display: block;
 
   .input-wrapper {
@@ -76,7 +76,7 @@ text-value-form-field {
   }
 }
 
-rich-text-value-form-field {
+rich-text-form-field {
   display: block;
 
   .input-wrapper {
@@ -112,7 +112,7 @@ rich-text-value-form-field {
   }
 }
 
-dropdown-value-form-field {
+dropdown-form-field {
   display: block;
 
   .input-wrapper {
@@ -139,7 +139,7 @@ dropdown-value-form-field {
   }
 }
 
-date-value-form-field {
+date-form-field {
   display: block;
 
   .input-wrapper {
