Add person form field component

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
@@ -54,6 +54,12 @@
                            (value-changed)="fieldValueChanged(%event)"
           ></date-form-field>
         {{/case}}
+        {{#case 'person'}}
+          <person-form-field {value}="value"
+                             {field-id}="id"
+                             (value-changed)="fieldValueChanged(%event)"
+          ></person-form-field>
+        {{/case}}
       {{/switch}}
     </div>
   {{/fields}}
