--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -84,6 +84,7 @@ rich-text-form-field {
       background: #fff;
       height: 62px;
       padding: 4px !important;
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
 
       .ql-editor {
         min-height: 100%;
@@ -160,6 +161,51 @@ date-form-field {
           top: 6px;
           left: 7px;
         }
+      }
+    }
+  }
+}
+
+person-form-field {
+  display: block;
+
+  .input-wrapper {
+    .person-info-wrapper {
+      display: flex;
+      align-items: center;
+      background-color: #fff;
+      border: 1px solid #ccc;
+      box-sizing: border-box;
+      height: 28px;
+      line-height: 28px;
+      border-radius: 2px;
+      padding: 4px;
+      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
+
+      a {
+        flex: 0 1;
+
+        i {
+          color: $icon-color-dark;
+        }
+
+        &:hover i {
+          color: #000;
+        }
+      }
+
+      person-info {
+        display: block;
+        flex: 1 1;
+        width: 0;
+        overflow: hidden;
+      }
+    }
+
+    autocomplete {
+      input {
+        border-radius: 2px;
+        margin: 0;
       }
     }
   }
