--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
@@ -20,47 +20,14 @@
           <i class="fa fa-question-circle" rel="tooltip" title="{{helptext}}"></i>
         {{/if}}
       </div>
-      {{#switch type}}
-        {{#case 'input'}}
-          <text-form-field {value}="value"
-                           {field-id}="id"
-                           {placeholder}="placeholder"
-                           (value-changed)="fieldValueChanged(%event)"
-          ></text-form-field>
-        {{/case}}
-        {{#case 'text'}}
-          <rich-text-form-field {value}="value"
-                                {field-id}="id"
-                                {placeholder}="placeholder"
-                                (value-changed)="fieldValueChanged(%event)"
-          ></rich-text-form-field>
-        {{/case}}
-        {{#case 'checkbox'}}
-          <checkbox-form-field {value}="value"
-                               {field-id}="id"
-                               (value-changed)="fieldValueChanged(%event)"
-          ></checkbox-form-field>
-        {{/case}}
-        {{#case 'dropdown'}}
-          <dropdown-form-field {value}="value"
-                               {options}="options"
-                               {field-id}="id"
-                               (value-changed)="fieldValueChanged(%event)"
-          ></dropdown-form-field>
-        {{/case}}
-        {{#case 'date'}}
-          <date-form-field {value}="value"
-                           {field-id}="id"
-                           (value-changed)="fieldValueChanged(%event)"
-          ></date-form-field>
-        {{/case}}
-        {{#case 'person'}}
-          <person-form-field {value}="value"
-                             {field-id}="id"
-                             (value-changed)="fieldValueChanged(%event)"
-          ></person-form-field>
-        {{/case}}
-      {{/switch}}
+      <auto-save-form-field
+        {type}="type"
+        {value}="value"
+        {field-id}="id"
+        {placeholder}="placeholder"
+        {options}="options"
+        (value-changed)="fieldValueChanged(%event)"
+      ></auto-save-form-field>
     </div>
   {{/fields}}
 </div>
