Add auto-save-form to info-pane component

--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -32,10 +32,11 @@
                         </assessment-attachments-list>
                         <assessment-urls-list></assessment-urls-list>
                     </div>
-                    <assessment-custom-attributes {(instance)}="instance"
-                                                  {(items)}="instance.custom_attribute_values"
-                                                  class="assessment-custom-attributes flex-box flex-box-multi">
-                    </assessment-custom-attributes>
+                    <!--<assessment-custom-attributes {(instance)}="instance"-->
+                                                  <!--{(items)}="instance.custom_attribute_values"-->
+                                                  <!--class="assessment-custom-attributes flex-box flex-box-multi">-->
+                    <!--</assessment-custom-attributes>-->
+                    <auto-save-form {instance}="instance"></auto-save-form>
                     <assessment-controls-toolbar class="assessment-controls-toolbar"
                                                  {instance}="instance"></assessment-controls-toolbar>
                 </div>
