--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form.mustache
@@ -30,21 +30,10 @@
           (value-changed)="fieldValueChanged(%event)"
         ></auto-save-form-field>
       {{else}}
-        {{#switch type}}
-          {{#case 'input'}}
-            {{value}}
-          {{/case}}
-          {{#case 'text'}}
-          {{/case}}
-          {{#case 'checkbox'}}
-          {{/case}}
-          {{#case 'dropdown'}}
-          {{/case}}
-          {{#case 'date'}}
-          {{/case}}
-          {{#case 'person'}}
-          {{/case}}
-        {{/switch}}
+        <auto-save-form-field-view
+          {type}="type"
+          {value}="value"
+        ></auto-save-form-field-view>
       {{/if}}
     </div>
   {{/fields}}
