Add rich-text-field-view component. Add text-field-view for displaying dropdown value.

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
@@ -9,4 +9,20 @@
       {value}="value"
     ></text-form-field-view>
   {{/case}}
+  {{#case 'text'}}
+    <rich-text-form-field-view
+      {value}="value"
+    ></rich-text-form-field-view>
+  {{/case}}
+  {{#case 'checkbox'}}
+  {{/case}}
+  {{#case 'dropdown'}}
+    <text-form-field-view
+      {value}="value"
+    ></text-form-field-view>
+  {{/case}}
+  {{#case 'date'}}
+  {{/case}}
+  {{#case 'person'}}
+  {{/case}}
 {{/switch}}
