Add checkbox-field-view component

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
@@ -15,6 +15,9 @@
     ></rich-text-form-field-view>
   {{/case}}
   {{#case 'checkbox'}}
+    <checkbox-form-field-view
+      {value}="value"
+    ></checkbox-form-field-view>
   {{/case}}
   {{#case 'dropdown'}}
     <text-form-field-view
