Add date-field-view component

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
@@ -25,6 +25,9 @@
     ></text-form-field-view>
   {{/case}}
   {{#case 'date'}}
+    <date-form-field-view
+      {value}="value"
+    ></date-form-field-view>
   {{/case}}
   {{#case 'person'}}
   {{/case}}
