Restructure components styles

--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -3,6 +3,9 @@
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
  */
 
+@import "fields/fields";
+@import "field-views/field-views";
+
 auto-save-form {
   display: block;
   position: relative;
@@ -63,183 +66,5 @@ auto-save-form {
 
   .save-button[disabled] {
     pointer-events: none;
-  }
-}
-
-text-form-field {
-  display: block;
-
-  .input-wrapper {
-    input {
-      margin-bottom: 0;
-      width: 100%;
-      box-sizing: border-box;
-      height: 28px;
-      border-radius: 2px;
-    }
-  }
-}
-
-rich-text-form-field {
-  display: block;
-
-  .input-wrapper {
-    .ql-container {
-      background: #fff;
-      height: 62px;
-      padding: 4px !important;
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-
-      .ql-editor {
-        min-height: 100%;
-      }
-    }
-
-    .rich-text__wrapper {
-      transition: border linear .2s, box-shadow linear .2s;
-    }
-
-    &.focused {
-      .rich-text__wrapper {
-        border-color: rgba(82, 168, 236, 0.8);
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-      }
-    }
-
-    &:not(.focused) {
-      .ql-container {
-        color: #555;
-        height: 93px;
-      }
-
-      .ql-toolbar,
-      .ql-tooltip {
-        display: none;
-      }
-    }
-  }
-}
-
-dropdown-form-field {
-  display: block;
-
-  .input-wrapper {
-    dropdown {
-      select {
-        width: 100%;
-        font-size: 13px;
-        -webkit-appearance: none;
-        border-radius: 2px;
-        outline: none;
-        border: 1px solid #ccc;
-        color: #555;
-        padding: 0 24px 0 4px;
-        text-overflow: ellipsis;
-        box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-        transition: border linear .2s, box-shadow linear .2s;
-        background: #fff url("data:image/svg+xml;utf8,<svg width='24' height='16' viewBox='0 0 1792 1792' xmlns='http://www.w3.org/2000/svg'><path fill='#797979' d='M1408 704q0 26-19 45l-448 448q-19 19-45 19t-45-19l-448-448q-19-19-19-45t19-45 45-19h896q26 0 45 19t19 45z'/></svg>") no-repeat 100% 50%;
-
-        &:focus {
-          border-color: rgba(82, 168, 236, 0.8);
-          box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075), 0 0 8px rgba(82, 168, 236, 0.6);
-          transition: border linear .2s, box-shadow linear .2s;
-        }
-      }
-    }
-  }
-}
-
-date-form-field {
-  display: block;
-
-  .input-wrapper {
-    datepicker {
-      .datepicker__input-wrapper {
-        input {
-          margin: 0;
-          width: 100%;
-          box-sizing: border-box;
-          height: 28px;
-          line-height: 28px;
-          border-radius: 2px;
-          padding-left: 24px;
-        }
-
-        i {
-          font-size: 14px;
-          top: 6px;
-          left: 7px;
-        }
-      }
-    }
-  }
-}
-
-person-form-field {
-  display: block;
-
-  .input-wrapper {
-    .person-info-wrapper {
-      display: flex;
-      align-items: center;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      box-sizing: border-box;
-      height: 28px;
-      line-height: 28px;
-      border-radius: 2px;
-      padding: 4px;
-      box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.075);
-
-      a {
-        flex: 0 1;
-
-        i {
-          color: $icon-color-dark;
-        }
-
-        &:hover i {
-          color: #000;
-        }
-      }
-
-      person-info {
-        display: block;
-        flex: 1 1;
-        width: 0;
-        overflow: hidden;
-      }
-    }
-
-    autocomplete {
-      input {
-        border-radius: 2px;
-        margin: 0;
-      }
-    }
-  }
-}
-
-text-form-field-view,
-rich-text-form-field-view {
-  display: block;
-
-  .view-wrapper {
-    overflow: hidden;
-    word-wrap: break-word;
-  }
-}
-
-checkbox-form-field-view {
-  display: block;
-}
-
-date-form-field-view {
-  display: block;
-
-  .view-wrapper {
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
   }
 }
