Add person-field-view component

--- a/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/auto-save-form-field-view.mustache
@@ -30,5 +30,8 @@
     ></date-form-field-view>
   {{/case}}
   {{#case 'person'}}
+    <person-form-field-view
+      {value}="value"
+    ></person-form-field-view>
   {{/case}}
 {{/switch}}
