--- a/src/ggrc/assets/stylesheets/components/auto-save-form/field-views/_field-views.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/field-views/_field-views.scss
@@ -17,7 +17,8 @@ checkbox-form-field-view {
   display: block;
 }
 
-date-form-field-view {
+date-form-field-view,
+person-form-field-view {
   display: block;
 
   .view-wrapper {
