Apply Modifications to Assessment Info Pane Components
- Add specific "comments" attribute to present related comments

--- a/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/info-pane/info-pane.mustache
@@ -52,10 +52,10 @@
               {{^if_in instance.status 'Completed,Final'}}
                 {{#is_allowed 'update' instance context='for'}}
                     <assessment-add-comment class="assessment-comments-add"
-                                            instance="instance"></assessment-add-comment>
+                                            {instance}="instance"></assessment-add-comment>
                 {{/is_allowed}}
               {{/if_in}}
-              {{> '/static/mustache/base_templates/comment_list.mustache' }}
+            <assessment-mapped-comments {mapped-items}="comments"></assessment-mapped-comments>
             </div>
         </div>
         <div class="tabs-wrap">
