Wrap Custom Attributes Rich Text in Read More Component

--- a/src/ggrc/assets/mustache/components/auto-save-form/field-views/rich-text-form-field-view.mustache
+++ b/src/ggrc/assets/mustache/components/auto-save-form/field-views/rich-text-form-field-view.mustache
@@ -5,7 +5,7 @@
 
 <div class="view-wrapper">
   {{#if value}}
-    {{{value}}}
+    <read-more {text}="value"></read-more>
   {{else}}
     <span class="empty-message">None</span>
   {{/if}}
