--- a/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
+++ b/src/ggrc/assets/stylesheets/components/auto-save-form/_auto-save-form.scss
@@ -3,6 +3,8 @@
  * Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
  */
 
+@import "auto-save-form-status";
+@import "auto-save-form-actions";
 @import "fields/fields";
 @import "field-views/field-views";
 
@@ -10,14 +12,6 @@ auto-save-form {
   display: block;
   position: relative;
   padding-top: 20px;
-
-  .auto-save-form-status {
-    position: absolute;
-    top: 0;
-    right: 0;
-    font-size: 12px;
-    color: #8a8a8a;
-  }
 
   .fields-wrapper {
     display: flex;
