--- a/src/ggrc/assets/mustache/components/assessment/controls-toolbar/controls-toolbar.mustache
+++ b/src/ggrc/assets/mustache/components/assessment/controls-toolbar/controls-toolbar.mustache
@@ -2,7 +2,7 @@
     Copyright (C) 2017 Google Inc.
     Licensed under http://www.apache.org/licenses/LICENSE-2.0 <see LICENSE file>
 }}
-<button class="btn btn-small btn-draft btn-extra-gray" can-click="showRelatedResponses" title="Show Related Assessments">Related Assessments</button>
+<button class="btn btn-small btn-draft btn-extra-gray" ($click)="showRelatedResponses" title="Show Related Assessments">Related Assessments</button>
 <auto-save-form-actions
   {(form-edit-mode)}="formState.editMode"
   {form-saving}="formState.saving"
@@ -10,9 +10,9 @@
   (on-save)="onFormSave()"
 ></auto-save-form-actions>
 {{#is_allowed 'update' instance context='for'}}
-    <object-state-toolbar instance="instance"></object-state-toolbar>
+    <object-state-toolbar {verifiers}="instance.assignees.Verifier" {instance}="instance"></object-state-toolbar>
 {{/is_allowed}}
-<simple-modal instance="instance" modal-title="modalTitle" state="state" extra-css-class="related-assessments">
+<simple-modal {instance}="instance" modal-title="modalTitle" {(state)}="state" extra-css-class="related-assessments">
     <div class="simple-modal__body">
       {{> '/static/mustache/assessments/related-assessments.mustache' }}
     </div>
